--- a/package.json
+++ b/package.json
@@ -1,40 +1,40 @@
 {
   "name": "pzpw-compiler",
   "version": "1.0.0",
-  "description": "",
-  "main": "compiler.js",
-  "scripts": {
-    "build": "tsc"
+  "description": "Node command-line tool to compile PZPW projects.",
+  "main": "./lib/compiler.js",
+  "bin": {
+    "pzpw": "./bin/index.js"
   },
+  "scripts": {
+    "build": "npm run clean && tsc",
+    "watch": "npm run clean && tsc --watch",
+    "clean": "node ./node_modules/del-cli/cli.js ./bin ./lib",
+    "publish": "npm update && npm run build && npm version minor && npm publish"
+  },
+  "author": "Konijima",
+  "license": "MIT",
+  "funding": {
+    "type": "paypal",
+    "url": "https://paypal.me/Konijima"
+  },
+  "homepage": "https://github.com/Konijima/pzpw-compiler#readme",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Konijima/pzpw-compiler.git"
   },
-  "keywords": [
-    "pipewrench",
-    "projectzomboid",
-    "project",
-    "zomboid",
-    "pzpw",
-    "typescript",
-    "typescripttolua",
-    "tstl",
-    "lua"
-  ],
-  "author": "asledgehammer",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Konijima/pzpw-compiler/issues"
   },
-  "homepage": "https://github.com/Konijima/pzpw-compiler#readme",
+  "keywords": [
+    "pzpw",
+    "pipewrench",
+    "projectzomboid"
+  ],
   "devDependencies": {
     "@types/node": "^18.7.5",
-    "ansi": "^0.3.1",
-    "chokidar": "^3.5.3",
-    "colors": "^1.4.0",
     "del-cli": "^4.0.1",
     "lua-types": "^2.11.0",
-    "ts-node": "^10.7.0",
     "typescript": "^4.6.2",
     "typescript-to-lua": "^1.4.2"
   }
