--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "lib": ["ESNext", "DOM"],
     "module": "NodeNext",
-    "target": "ESNext"
+    "target": "ESNext",
+    "rootDir": "src",
+    "outDir": ""
   }
 }
