Base setup ready
Now it's time to write the actual compilation logic.

--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "pzpw-compiler",
   "version": "1.0.0",
   "description": "Node command-line tool to compile PZPW projects.",
-  "main": "./lib/compiler.js",
+  "main": "./dist/lib/compiler.js",
+  "type": "module",
   "bin": {
-    "pzpw-compiler": "./bin/index.js"
+    "pzpw-compiler": "./dist/index.js"
   },
+  "types": "./dts",
   "scripts": {
+    "clean": "del-cli --force ./bin ./lib ./dts",
     "build": "npm run clean && tsc",
-    "watch": "npm run clean && tsc --watch",
-    "clean": "node ./node_modules/del-cli/cli.js ./bin ./lib",
-    "pre-publish": "npm run build"
+    "watch": "npm run clean && tsc --watch"
   },
   "publishConfig": {
     "tag": "v1-latest"
@@ -36,9 +37,12 @@
   ],
   "devDependencies": {
     "@types/node": "^18.7.5",
+    "typescript": "^4.6.2"
+  },
+  "dependencies": {
+    "chalk": "^5.0.1",
     "del-cli": "^4.0.1",
     "lua-types": "^2.11.0",
-    "typescript": "^4.6.2",
     "typescript-to-lua": "^1.4.2"
   }
 }
