--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,35 @@
 {
   "compilerOptions": {
-    "lib": ["ESNext", "DOM"],
-    "module": "NodeNext",
-    "target": "ESNext",
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "lib": [
+      "ES6",
+      "DOM"
+    ],
+    "outDir": "dist",
     "rootDir": "src",
-    "outDir": ""
-  }
+    "strict": true,
+    "skipLibCheck": true,
+    "importHelpers": true,
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "strictNullChecks": false,
+    "resolveJsonModule": true,
+    "strictFunctionTypes": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "declaration": true,
+    "declarationDir": "dts",
+    "typeRoots": [
+      "./node_modules/@types"
+    ]
+  },
+  "include": [
+    "./src/**/*.ts"
+  ],
+  "exclude": [
+    "./node_modules"
+  ]
 }
