--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chalk": "^5.0.1",
     "del-cli": "^4.0.1",
     "lua-types": "^2.11.0",
+    "pzpw-config-schema": "^1.0.2",
     "typescript-to-lua": "^1.4.2"
   }
 }
