--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pzpw-compiler",
-  "version": "2.3.4-alpha",
+  "version": "2.4.4-alpha",
   "description": "Node command-line tool to compile PZPW projects.",
   "main": "./dist/lib/compiler.js",
   "type": "module",
@@ -44,13 +44,13 @@
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
     "eslint": "^8.22.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "chalk": "^5.0.1",
     "del-cli": "^4.0.1",
     "lua-types": "^2.11.0",
     "pzpw-config-schema": "^1.0.2",
-    "typescript-to-lua": "^1.4.2"
+    "typescript-to-lua": "~1.11.1"
   }
 }
