Override impl for resolve imports
- import support for Kahlua
- impl original pipewrench reimport feature
- setup ts-node for debug

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,7 @@
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
-    "lib": [
-      "esnext",
-      "DOM"
-    ],
+    "lib": ["esnext", "DOM"],
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
@@ -22,14 +19,14 @@
     "allowSyntheticDefaultImports": true,
     "declaration": true,
     "declarationDir": "dts",
-    "typeRoots": [
-      "./node_modules/@types"
-    ]
+    "typeRoots": ["./node_modules/@types"]
   },
-  "include": [
-    "./src/**/*.ts"
-  ],
-  "exclude": [
-    "./node_modules"
-  ]
+  "include": ["./src/**/*.ts"],
+  "exclude": ["./node_modules"],
+  "ts-node": {
+    "transpileOnly": true,
+    "esm": true,
+    "experimentalSpecifierResolution": "node",
+    "files": true
+  }
 }
