--- a/package.json
+++ b/package.json
@@ -43,17 +43,20 @@
     "project-zomboid"
   ],
   "devDependencies": {
-    "@types/node": "^18.7.5",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
-    "eslint": "^8.22.0",
+    "@types/node": "^18.16.3",
+    "@types/resolve": "^1.20.2",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.39.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "chalk": "^5.0.1",
-    "del-cli": "^4.0.1",
+    "@asledgehammer/tstl-pipewrench": "^0.0.15",
+    "chalk": "^5.2.0",
+    "del-cli": "^5.0.0",
     "lua-types": "^2.13.1",
     "pzpw-config-schema": "^1.0.2",
-    "typescript-to-lua": "~1.14.0"
+    "typescript-to-lua": "~1.15.0"
   }
 }
